fix overflow bug

--- a/src/pages/WeatherDetails/WeatherDetails.scss
+++ b/src/pages/WeatherDetails/WeatherDetails.scss
@@ -2,6 +2,9 @@
 @import '../../styles/abstracts/variables';
 
 .weather-details {
+  &-container {
+    overflow: hidden;
+  }
   &-title {
     font-size: $font-size-extra-large;
     text-align: center;
@@ -11,7 +14,7 @@
   &-hourly {
     gap: $margin-medium;
     margin: $margin-large;
-    height: 15rem;
+    height: 16rem;
 
     &-card {
       background-color: $primary-dark-transparent;
@@ -22,6 +25,7 @@
   &-date {
     font-size: $font-size-tiny;
     font-weight: $font-weight-normal;
+    cursor: pointer;
 
     &__container {
       display: flex;
