--- a/src/pages/WeatherDetails/WeatherHourly/WeatherHourly.scss
+++ b/src/pages/WeatherDetails/WeatherHourly/WeatherHourly.scss
@@ -4,7 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: $margin-small;
+  &__time {
+    font-size: $font-size-small;
+    margin: $margin-small;
+  }
+
   &__icon {
     width: 8rem;
   }
